# cloud-seed

./: Cargo.toml  README.md  cloud-seed.service
.github/workflows/: rust-build.yml
src/: execute.rs  main.rs  schema.rs  source.rs
src/source/: alibaba.rs  amazon.rs  exoscale.rs  gcorelabs.rs  google.rs  helpers.rs  openstack.rs  oracle.rs  vultr.rs
